--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,8 +2,44 @@ html, body {
     margin: 0;
 }
 
+table {
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    table-layout: fixed;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+table tr {
+    border: 1px solid #ddd;
+    padding: .35em;
+}
+
+table caption {
+    font-weight: bold;
+}
+
+table th,
+table td {
+    padding: .625em;
+    text-align: center;
+}
+table th {
+    background: #999;
+    color: #fff;
+    font-size: .85em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+}
+table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .content {
     padding-left: 20px;
+    padding-right: 20px;
 }
 
 .header-right {
