Nonogram grid in place and resizeable && colorpicker in place

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,10 @@ html, body {
     margin: 0;
 }
 
+/*.gridButton {*/
+/*    background-color: blue;*/
+/*}*/
+
 /*table {*/
 /*    border: 1px solid #ccc;*/
 /*    border-collapse: collapse;*/
