--- a/includes/header.html
+++ b/includes/header.html
@@ -1,8 +1,8 @@
 <div class="header">
-    <a href="./index.php" class="logo">Nonogram Solver</a>
+    <a href="/WebGui/index.php" class="logo">Nonogram Solver</a>
     <div class="header-right">
-        <a class="active" href="./index.php">Home</a>
-        <a href="./help.php">Help</a>
-        <a href="./fileManagement/index.php">Grid Files</a>
+        <a class="active" href="/WebGui/index.php">Home</a>
+        <a href="/WebGui/help.php">Help</a>
+        <a href="/WebGui/fileManagement/index.php">Grid Files</a>
     </div>
 </div>
