--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,15 @@
+/*
+Author: Lane Moseley
+Description: This is the main style sheet for the website.
+*/
+
+@import "header.css";
+@import "footer.css";
+
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     margin: 0;
 }
@@ -8,6 +20,11 @@ html, body {
     min-width: 30px;
     min-height: 30px;
     padding: 0;
+}
+
+.content {
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 /*table {*/
@@ -44,59 +61,3 @@ html, body {
 /*    overflow: hidden;*/
 /*    text-overflow: ellipsis;*/
 /*}*/
-
-.content {
-    padding-left: 20px;
-    padding-right: 20px;
-}
-
-.header-right {
-    float: right;
-}
-
-.header a.active {
-    background-color: dodgerblue;
-    color: white;
-}
-
-.header a.hover {
-    background-color: #ddd;
-    color: black;
-}
-
-.header a.logo {
-    font-size: 25px;
-    font-weight: bold;
-}
-
-.header a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    border-radius: 4px;
-}
-
-.header {
-    overflow: hidden;
-    background-color: aqua;
-    border: 1px solid green;
-    padding: 20px 10px;
-}
-
-* {
-    box-sizing: border-box;
-}
-
-
-
-.footer-center {
-    text-align: center;
-}
-
-.footer {
-    height: 50px;
-    background-color: aqua;
-    border: 1px solid green;
-    padding: 10px 10px;
-}
