--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,24 @@ html, body {
     margin: 0;
 }
 
+h1, h3 {
+    margin: 0;
+}
+
+dl {
+    margin-top: 5px;
+    margin-left: 50px;
+}
+
+dt {
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+.howto {
+    font-style: italic;
+}
+
 .gridButton {
     color: red;
     font-size: 20px;
