--- a/includes/header.html
+++ b/includes/header.html
@@ -2,7 +2,7 @@
     <a href="/WebGUI/index.php" class="logo">Nonogram Solver</a>
     <div class="header-right">
         <a class="active" href="/WebGUI/index.php">Home</a>
-        <a href="/WebGUI/help.php">Help</a>
-        <a href="/WebGUI/fileManagement/index.php">Grid Files</a>
+        <a class="active" href="/WebGUI/help.php">Help</a>
+        <a class="active" href="/WebGUI/fileManagement/index.php">Grid Files</a>
     </div>
 </div>
